--- a/public/global.css
+++ b/public/global.css
@@ -4,10 +4,14 @@ html, body {
 	height: 100%;
 }
 
+/* To hide horizontal scrollbar */
+html, body {
+	overflow-x: hidden;
+}
+
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
